correction on visibility

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,11 @@ body {
     background-color: var(--prussian-blue);
 }
 
+.wrapper{
+    width: 1400px;
+    margin: 0 auto;
+}
+
 #game {
     background-color: var(--xanthous);
 }
